// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleEditorFlyout don't render after closing the flyout 1`] = `""`;

exports[`RuleEditorFlyout don't render when not opened 1`] = `""`;

exports[`RuleEditorFlyout renders the flyout after adding a condition to a rule 1`] = `
<Fragment>
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    className="ml-rule-editor-flyout"
    onClose={[Function]}
  >
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <EuiTitle
        size="m"
      >
        <h1
          id="flyoutTitle"
        >
          <MemoizedFormattedMessage
            defaultMessage="Create job rule"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.createRuleTitle"
          />
        </h1>
      </EuiTitle>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <DetectorDescriptionList
        anomaly={
          Object {
            "detectorIndex": 0,
            "jobId": "farequote_no_by",
            "source": Object {
              "function": "mean",
            },
          }
        }
        detector={
          Object {
            "detector_description": "mean(responsetime)",
            "detector_index": 0,
            "field_name": "responsetime",
            "function": "mean",
          }
        }
        job={
          Object {
            "analysis_config": Object {
              "bucket_span": "5m",
              "detectors": Array [
                Object {
                  "detector_description": "mean(responsetime)",
                  "detector_index": 0,
                  "field_name": "responsetime",
                  "function": "mean",
                },
                Object {
                  "custom_rules": Array [
                    Object {
                      "actions": Array [
                        "skip_result",
                      ],
                      "conditions": Array [
                        Object {
                          "applies_to": "diff_from_typical",
                          "operator": "lte",
                          "value": 123,
                        },
                      ],
                    },
                  ],
                  "detector_description": "min(responsetime)",
                  "detector_index": 1,
                  "field_name": "responsetime",
                  "function": "max",
                },
              ],
            },
            "description": "Overall response time",
            "job_id": "farequote_no_by",
          }
        }
      />
      <EuiSpacer
        size="m"
      />
      <EuiText>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="Job rules instruct anomaly detectors to change their behavior based on domain-specific knowledge that you provide. When you create a job rule, you can specify conditions, scope, and actions. When the conditions of a job rule are satisfied, its actions are triggered. {learnMoreLink}"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.rulesDescription"
            values={
              Object {
                "learnMoreLink": <EuiLink
                  href="jest-metadata-mock-url"
                  target="_blank"
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Learn more"
                    id="xpack.ml.ruleEditor.ruleEditorFlyout.rulesDescription.learnMoreLinkText"
                  />
                </EuiLink>,
              }
            }
          />
        </p>
      </EuiText>
      <EuiSpacer />
      <EuiTitle>
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="Action"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.actionTitle"
          />
        </h2>
      </EuiTitle>
      <ActionsSection
        actions={
          Array [
            "skip_result",
          ]
        }
        onSkipModelUpdateChange={[Function]}
        onSkipResultChange={[Function]}
      />
      <EuiSpacer
        size="xl"
      />
      <EuiTitle>
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="Conditions"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.conditionsTitle"
          />
        </h2>
      </EuiTitle>
      <EuiSpacer
        size="s"
      />
      <EuiCheckbox
        checked={true}
        className="scope-enable-checkbox"
        compressed={false}
        disabled={true}
        id="enable_conditions_checkbox"
        indeterminate={false}
        label="Add numeric conditions for when the job rule applies. Multiple conditions are combined using AND."
        onChange={[Function]}
      />
      <EuiSpacer
        size="s"
      />
      <ConditionsSection
        addCondition={[Function]}
        conditions={
          Array [
            Object {
              "applies_to": "actual",
              "operator": "lt",
              "value": 1,
            },
          ]
        }
        deleteCondition={[Function]}
        isEnabled={true}
        updateCondition={[Function]}
      />
      <EuiSpacer
        size="xl"
      />
      <ScopeSection
        filterListIds={Array []}
        isEnabled={false}
        onEnabledChange={[Function]}
        partitioningFieldNames={Array []}
        updateScope={[Function]}
      />
      <EuiCallOut
        color="warning"
        iconType="help"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Rerun job"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.rerunJobTitle"
          />
        }
      >
        <p>
          <MemoizedFormattedMessage
            defaultMessage="Changes to job rules take effect for new results only."
            id="xpack.ml.ruleEditor.ruleEditorFlyout.whenChangesTakeEffectDescription"
          />
        </p>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="To apply these changes to existing results you must clone and rerun the job. Note rerunning the job may take some time and should only be done once you have completed all your changes to the rules for this job."
            id="xpack.ml.ruleEditor.ruleEditorFlyout.howToApplyChangesToExistingResultsDescription"
          />
        </p>
      </EuiCallOut>
    </EuiFlyoutBody>
    <EuiFlyoutFooter>
      <EuiFlexGroup
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            flush="left"
            iconType="cross"
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Close"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.closeButtonLabel"
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiButton
            fill={true}
            isDisabled={false}
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Save"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.saveButtonLabel"
            />
          </EuiButton>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlyoutFooter>
  </EuiFlyout>
</Fragment>
`;

exports[`RuleEditorFlyout renders the flyout after setting the rule to edit 1`] = `
<Fragment>
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    className="ml-rule-editor-flyout"
    onClose={[Function]}
  >
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <EuiTitle
        size="m"
      >
        <h1
          id="flyoutTitle"
        >
          <MemoizedFormattedMessage
            defaultMessage="Edit job rule"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.editRuleTitle"
          />
        </h1>
      </EuiTitle>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <DetectorDescriptionList
        anomaly={
          Object {
            "detectorIndex": 1,
            "jobId": "farequote_no_by",
            "source": Object {
              "function": "max",
            },
          }
        }
        detector={
          Object {
            "custom_rules": Array [
              Object {
                "actions": Array [
                  "skip_result",
                ],
                "conditions": Array [
                  Object {
                    "applies_to": "diff_from_typical",
                    "operator": "lte",
                    "value": 123,
                  },
                ],
              },
            ],
            "detector_description": "min(responsetime)",
            "detector_index": 1,
            "field_name": "responsetime",
            "function": "max",
          }
        }
        job={
          Object {
            "analysis_config": Object {
              "bucket_span": "5m",
              "detectors": Array [
                Object {
                  "detector_description": "mean(responsetime)",
                  "detector_index": 0,
                  "field_name": "responsetime",
                  "function": "mean",
                },
                Object {
                  "custom_rules": Array [
                    Object {
                      "actions": Array [
                        "skip_result",
                      ],
                      "conditions": Array [
                        Object {
                          "applies_to": "diff_from_typical",
                          "operator": "lte",
                          "value": 123,
                        },
                      ],
                    },
                  ],
                  "detector_description": "min(responsetime)",
                  "detector_index": 1,
                  "field_name": "responsetime",
                  "function": "max",
                },
              ],
            },
            "description": "Overall response time",
            "job_id": "farequote_no_by",
          }
        }
      />
      <EuiSpacer
        size="m"
      />
      <EuiText>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="Job rules instruct anomaly detectors to change their behavior based on domain-specific knowledge that you provide. When you create a job rule, you can specify conditions, scope, and actions. When the conditions of a job rule are satisfied, its actions are triggered. {learnMoreLink}"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.rulesDescription"
            values={
              Object {
                "learnMoreLink": <EuiLink
                  href="jest-metadata-mock-url"
                  target="_blank"
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Learn more"
                    id="xpack.ml.ruleEditor.ruleEditorFlyout.rulesDescription.learnMoreLinkText"
                  />
                </EuiLink>,
              }
            }
          />
        </p>
      </EuiText>
      <EuiSpacer />
      <EuiTitle>
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="Action"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.actionTitle"
          />
        </h2>
      </EuiTitle>
      <ActionsSection
        actions={
          Array [
            "skip_result",
          ]
        }
        onSkipModelUpdateChange={[Function]}
        onSkipResultChange={[Function]}
      />
      <EuiSpacer
        size="xl"
      />
      <EuiTitle>
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="Conditions"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.conditionsTitle"
          />
        </h2>
      </EuiTitle>
      <EuiSpacer
        size="s"
      />
      <EuiCheckbox
        checked={true}
        className="scope-enable-checkbox"
        compressed={false}
        disabled={true}
        id="enable_conditions_checkbox"
        indeterminate={false}
        label="Add numeric conditions for when the job rule applies. Multiple conditions are combined using AND."
        onChange={[Function]}
      />
      <EuiSpacer
        size="s"
      />
      <ConditionsSection
        addCondition={[Function]}
        conditions={
          Array [
            Object {
              "applies_to": "diff_from_typical",
              "operator": "lte",
              "value": 123,
            },
          ]
        }
        deleteCondition={[Function]}
        isEnabled={true}
        updateCondition={[Function]}
      />
      <EuiSpacer
        size="xl"
      />
      <ScopeSection
        filterListIds={Array []}
        isEnabled={false}
        onEnabledChange={[Function]}
        partitioningFieldNames={Array []}
        updateScope={[Function]}
      />
      <EuiCallOut
        color="warning"
        iconType="help"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Rerun job"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.rerunJobTitle"
          />
        }
      >
        <p>
          <MemoizedFormattedMessage
            defaultMessage="Changes to job rules take effect for new results only."
            id="xpack.ml.ruleEditor.ruleEditorFlyout.whenChangesTakeEffectDescription"
          />
        </p>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="To apply these changes to existing results you must clone and rerun the job. Note rerunning the job may take some time and should only be done once you have completed all your changes to the rules for this job."
            id="xpack.ml.ruleEditor.ruleEditorFlyout.howToApplyChangesToExistingResultsDescription"
          />
        </p>
      </EuiCallOut>
    </EuiFlyoutBody>
    <EuiFlyoutFooter>
      <EuiFlexGroup
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            flush="left"
            iconType="cross"
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Close"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.closeButtonLabel"
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiButton
            fill={true}
            isDisabled={false}
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Save"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.saveButtonLabel"
            />
          </EuiButton>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlyoutFooter>
  </EuiFlyout>
</Fragment>
`;

exports[`RuleEditorFlyout renders the flyout for creating a rule with conditions only 1`] = `
<Fragment>
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    className="ml-rule-editor-flyout"
    onClose={[Function]}
  >
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <EuiTitle
        size="m"
      >
        <h1
          id="flyoutTitle"
        >
          <MemoizedFormattedMessage
            defaultMessage="Create job rule"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.createRuleTitle"
          />
        </h1>
      </EuiTitle>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <DetectorDescriptionList
        anomaly={
          Object {
            "detectorIndex": 0,
            "jobId": "farequote_no_by",
            "source": Object {
              "function": "mean",
            },
          }
        }
        detector={
          Object {
            "detector_description": "mean(responsetime)",
            "detector_index": 0,
            "field_name": "responsetime",
            "function": "mean",
          }
        }
        job={
          Object {
            "analysis_config": Object {
              "bucket_span": "5m",
              "detectors": Array [
                Object {
                  "detector_description": "mean(responsetime)",
                  "detector_index": 0,
                  "field_name": "responsetime",
                  "function": "mean",
                },
                Object {
                  "custom_rules": Array [
                    Object {
                      "actions": Array [
                        "skip_result",
                      ],
                      "conditions": Array [
                        Object {
                          "applies_to": "diff_from_typical",
                          "operator": "lte",
                          "value": 123,
                        },
                      ],
                    },
                  ],
                  "detector_description": "min(responsetime)",
                  "detector_index": 1,
                  "field_name": "responsetime",
                  "function": "max",
                },
              ],
            },
            "description": "Overall response time",
            "job_id": "farequote_no_by",
          }
        }
      />
      <EuiSpacer
        size="m"
      />
      <EuiText>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="Job rules instruct anomaly detectors to change their behavior based on domain-specific knowledge that you provide. When you create a job rule, you can specify conditions, scope, and actions. When the conditions of a job rule are satisfied, its actions are triggered. {learnMoreLink}"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.rulesDescription"
            values={
              Object {
                "learnMoreLink": <EuiLink
                  href="jest-metadata-mock-url"
                  target="_blank"
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Learn more"
                    id="xpack.ml.ruleEditor.ruleEditorFlyout.rulesDescription.learnMoreLinkText"
                  />
                </EuiLink>,
              }
            }
          />
        </p>
      </EuiText>
      <EuiSpacer />
      <EuiTitle>
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="Action"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.actionTitle"
          />
        </h2>
      </EuiTitle>
      <ActionsSection
        actions={
          Array [
            "skip_result",
          ]
        }
        onSkipModelUpdateChange={[Function]}
        onSkipResultChange={[Function]}
      />
      <EuiSpacer
        size="xl"
      />
      <EuiTitle>
        <h2>
          <MemoizedFormattedMessage
            defaultMessage="Conditions"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.conditionsTitle"
          />
        </h2>
      </EuiTitle>
      <EuiSpacer
        size="s"
      />
      <EuiCheckbox
        checked={true}
        className="scope-enable-checkbox"
        compressed={false}
        disabled={true}
        id="enable_conditions_checkbox"
        indeterminate={false}
        label="Add numeric conditions for when the job rule applies. Multiple conditions are combined using AND."
        onChange={[Function]}
      />
      <EuiSpacer
        size="s"
      />
      <ConditionsSection
        addCondition={[Function]}
        conditions={Array []}
        deleteCondition={[Function]}
        isEnabled={true}
        updateCondition={[Function]}
      />
      <EuiSpacer
        size="xl"
      />
      <ScopeSection
        filterListIds={Array []}
        isEnabled={false}
        onEnabledChange={[Function]}
        partitioningFieldNames={Array []}
        updateScope={[Function]}
      />
      <EuiCallOut
        color="warning"
        iconType="help"
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Rerun job"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.rerunJobTitle"
          />
        }
      >
        <p>
          <MemoizedFormattedMessage
            defaultMessage="Changes to job rules take effect for new results only."
            id="xpack.ml.ruleEditor.ruleEditorFlyout.whenChangesTakeEffectDescription"
          />
        </p>
        <p>
          <MemoizedFormattedMessage
            defaultMessage="To apply these changes to existing results you must clone and rerun the job. Note rerunning the job may take some time and should only be done once you have completed all your changes to the rules for this job."
            id="xpack.ml.ruleEditor.ruleEditorFlyout.howToApplyChangesToExistingResultsDescription"
          />
        </p>
      </EuiCallOut>
    </EuiFlyoutBody>
    <EuiFlyoutFooter>
      <EuiFlexGroup
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            flush="left"
            iconType="cross"
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Close"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.closeButtonLabel"
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiButton
            fill={true}
            isDisabled={true}
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Save"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.saveButtonLabel"
            />
          </EuiButton>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlyoutFooter>
  </EuiFlyout>
</Fragment>
`;

exports[`RuleEditorFlyout renders the select action component for a detector with a rule 1`] = `
<Fragment>
  <EuiFlyout
    aria-labelledby="flyoutTitle"
    className="ml-rule-editor-flyout"
    onClose={[Function]}
  >
    <EuiFlyoutHeader
      hasBorder={true}
    >
      <EuiTitle
        size="m"
      >
        <h1
          id="flyoutTitle"
        >
          <MemoizedFormattedMessage
            defaultMessage="Edit job rules"
            id="xpack.ml.ruleEditor.ruleEditorFlyout.editRulesTitle"
          />
        </h1>
      </EuiTitle>
    </EuiFlyoutHeader>
    <EuiFlyoutBody>
      <SelectRuleAction
        addItemToFilterList={[Function]}
        anomaly={
          Object {
            "detectorIndex": 1,
            "jobId": "farequote_no_by",
            "source": Object {
              "function": "max",
            },
          }
        }
        deleteRuleAtIndex={[Function]}
        job={
          Object {
            "analysis_config": Object {
              "bucket_span": "5m",
              "detectors": Array [
                Object {
                  "detector_description": "mean(responsetime)",
                  "detector_index": 0,
                  "field_name": "responsetime",
                  "function": "mean",
                },
                Object {
                  "custom_rules": Array [
                    Object {
                      "actions": Array [
                        "skip_result",
                      ],
                      "conditions": Array [
                        Object {
                          "applies_to": "diff_from_typical",
                          "operator": "lte",
                          "value": 123,
                        },
                      ],
                    },
                  ],
                  "detector_description": "min(responsetime)",
                  "detector_index": 1,
                  "field_name": "responsetime",
                  "function": "max",
                },
              ],
            },
            "description": "Overall response time",
            "job_id": "farequote_no_by",
          }
        }
        setEditRuleIndex={[Function]}
        updateRuleAtIndex={[Function]}
      />
    </EuiFlyoutBody>
    <EuiFlyoutFooter>
      <EuiFlexGroup
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            flush="left"
            iconType="cross"
            onClick={[Function]}
          >
            <MemoizedFormattedMessage
              defaultMessage="Close"
              id="xpack.ml.ruleEditor.ruleEditorFlyout.closeButtonLabel"
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlyoutFooter>
  </EuiFlyout>
</Fragment>
`;
